cabal-version:      3.0
name:               repllamb
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Harshit Panthi
maintainer:         harshitpanthi2006@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable repllamb
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Term
                    , Syntax
                    , Compile
                    , Pretty
    build-depends:    base >=4 && <5
                    , containers
                    , megaparsec
    default-language: Haskell2010
    ghc-options:      -Wall
